assets/css/main.css
/* ... */
#sponsors h3 {
  text-align: center;
  color: #265A26;
  font-size: 24px;
}

#sponsors .sponsor-blocks {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

#sponsors .sponsor-blocks .sponsor-img {
  border: 1px solid #E3E1E1;
}

.sponsor-blocks>p {
  color: white;
  padding: 0 30px;
}

.sponsor-blocks>p>span {
  color: #265A26;
}

.donate-button {
  padding: 10px 30px;
  font-size: 24px;
  text-decoration: none;
  border: 3px solidwhite;
  z-index: 10;
  background-color: #f73160;
  color: white;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-box-shadow: 0 2px 10px 5px#4f7744;
  box-shadow: 0 2px 10px 5px #4f7744;
}

.donate-button:hover {
  padding: 10px 25px;
  color: #f73160;
  font-style: italic;
  letter-spacing: 2px;
  -webkit-transition: all 0.5s ease-in-out 0s;
  transition: all 0.5s ease-in-out 0s;
  background-color: white;
}

@media (max-width: 760px) {
  .donate-button {
    padding: 2px 10px;
  }

  .donate-button:hover,
  .donate-button:active {
    padding: 2px 7px;
    letter-spacing: 0px;
    color: white;
  }
}

/*--------------------------------------------------------------
About Section
----------------------------------------------------------------*/
.about {
  margin: 0 10%;
}

.about .section-container,
.about .sub-container {
  padding: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.about .section-container {
  width: 100%;
  margin-bottom: 10%;
  padding: 20px 0;
}

.about .section-container a {
  z-index: 50;
  position: absolute;
}

.about .sub-container {
  padding: 10px 30px;
  margin: 0 50px;
  border-left: 3px solid #86B1BA;
  opacity: 0;
}

.about h2 {
  font-size: #86B1BA;
  letter-spacing: 1px;
  margin-bottom: 0;
}

.about h3 {
  font-size: 24px;
  letter-spacing: 1px;
  color: #265A26;
  margin-top: 5%;
}

.about .team-item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
}

.about .team-item .persons-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.persons-container {
  padding: 0 50px;
}

.about .team-item .person-item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.about .team-item .person-item .img-cropper {
  width: 200px;
  height: 200px;
  overflow: hidden;
  border-radius: 50%;
  /* margin-left: 25%;
  margin-top: 35%; */
}

.about .team-item .person-item h4 {
  margin-top: 5px;
  margin-bottom: 5px;
}

.about #lead .img-cropper {
  overflow: hidden;
  border-radius: 50%;
  /* margin-left: -25%; */
}

.img-cropper {
  margin: 10px;
}

#director {
  width: 300px;
  height: 300px;
  border-radius: 50%;
}

/* .about #aboutTeam {
  display: none;
} */

/*--------------------------------------------------------------
Schedule Section
----------------------------------------------------------------*/
#schedule {
  padding: 0 60px 60px 60px;
}

#schedule .nav-tabs {
  text-align: center;
  margin: auto;
  display: block;
  border-bottom: 0;
  margin-bottom: 60px;
  background-color: #f3f2ee;
  padding: 10px 0;
  font-size: 24px;
}

#schedule .nav-tabs li {
  display: inline-block;
  margin-bottom: 0;
}

#schedule .nav-tabs a {
  border: none;
  font-weight: 600;
  background-color: black;
  color: #fff;
  padding: 10px 100px;
  cursor: pointer;
}

@media (max-width: 991px) {
  #schedule .nav-tabs a {
    padding: 8px 60px;
  }
}

@media (max-width: 767px) {
  #schedule .nav-tabs a {
    padding: 8px 50px;
  }
}

@media (max-width: 480px) {
  #schedule .nav-tabs a {
    padding: 8px 10px;
  }
}

#schedule .nav-tabs a.active {
  background-color: #86B1BA;
  color: #fff;
}

#schedule .sub-heading {
  text-align: center;
  font-size: 18px;
  font-style: italic;
  margin: 0 auto 30px auto;
}

@media (min-width: 991px) {
  #schedule .sub-heading {
    width: 75%;
  }
}

#schedule .tab-pane {
  -webkit-transition: ease-in-out .2s;
  transition: ease-in-out .2s;
}

#schedule .schedule-item {
  border-bottom: 1px solid #86B1BA;
  padding-top: 15px;
  padding-bottom: 15px;
  -webkit-transition: background-color ease-in-out 0.3s;
  transition: background-color ease-in-out 0.3s;
  background-color: #f3f2ee;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}

/* #schedule .schedule-item:hover {
  background-color: #bad5da;
} */

#schedule .schedule-item time {
  display: inline-block;
  color: #265A26;
}

#schedule .schedule-item .speaker-row {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  margin-bottom: 0;
}

@media (max-width: 980px) {
  #schedule .schedule-item .speaker-row img {
    display: none;
  }

  #schedule .schedule-item .speaker-row h3 {
    padding: 0 20px;
  }
}

#schedule .schedule-item .col-md-2 {
  padding: 5px;
}

#schedule .schedule-item .speaker {
  overflow: hidden;
  float: left;
  margin: 30px 50px 10px 0;
  height: 300px;
}
/* ... */

